refactor: Update project metadata and dependencies
Updates the project name in package.json and metadata.json to reflect the iPhone adjustment. Removes React and Gemini AI dependencies from package.json and updates Vite configuration to remove the React plugin. Modifies index.html to remove the ES module import map and include Core-js and Babel via CDN, simplifying the build setup.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ungdungcuatoi_luutru",
+  "name": "ungdungcuatoi_luutru_-chinh-lai-cho-iphone",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,12 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "18.2.0",
-    "@google/genai": "latest"
+
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
+    
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
